# se-phere

./: .gitignore  Cargo.toml  README.md  RunBuild.sh  RunClient.sh  RunServer.sh  commands.xlsx  ps+vsc.sh  sephere-commands.xlsx
assets/mesh/: 0.stl  1.stl  2.stl  3.stl  4.stl  5.stl  6.stl  7.stl  8.stl  9.stl  cali-cube.STL  colon.stl  ground_lowpoly.stl  heart.stl  mickey.stl  rt_marker.stl  small_sphere.stl
client/: Cargo.toml
client/assets/mesh/: cube.stl  ground.stl  sphere.stl
client/src/: .meshloader.rs.swp  camera.rs  entities.rs  keys.rs  main.rs  meshloader.rs  music.rs  shader.rs  title.rs
client/src/shaders/: basic.fs  lighting no texture.fs  lighting.fs  lighting.vs
gameover/: Cargo.toml
gameover/src/: main.rs
image-ui/: Cargo.toml
image-ui/src/: main.rs
messaging/: Cargo.toml
messaging/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: camera.rs  entities.rs  keys.rs  main.rs  meshloader.rs  player.rs  shader.rs  utils.rs
src/shaders/: ambient.fs  basic.vs  lighting.fs  lighting.vs
title/: Cargo.toml
title/src/: main.rs
