[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "0.27.0"
glfw = "0.55.0"
num-traits = "0.2.18"
rand = "0.8.5"
stl_io = "0.7.0"
tokio = { version = "1", features = ["full"] }
messaging = {path = "../messaging"}
image = { version = "0.24", features = ["jpeg", "png"] }
eframe = "0.27.2"
env_logger = "0.11.3"
egui_extras = { version = "*", features = ["all_loaders"] }
rodio = "0.17.3"
