[package]
name = "gameover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
env_logger = "0.11.3"
image = "0.24"
egui_extras = { version = "*", features = ["all_loaders"] }

[profile.release]
opt-level = 0